--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box; }
 
+html {
+  overflow-x: hidden;
+  scroll-behavior: smooth; }
+
 body {
   background-color: #F5F5F5;
   color: #000000;
@@ -26,6 +30,11 @@ h3 {
   font-size: 30px;
   line-height: 31.25px; }
 
+h5 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  line-height: 10px; }
+
 a {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -39,7 +48,9 @@ p {
   padding: 1rem 0; }
 
 button.outline {
-  background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+  border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+  border-image-slice: 1;
+  border-width: 3px;
   background: transparent;
   box-sizing: border-box;
   display: block;
@@ -48,16 +59,17 @@ button.outline {
   letter-spacing: 1px;
   text-decoration: none;
   text-transform: uppercase;
-  width: 264px;
   z-index: 2;
   border-radius: 20px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   -ms-border-radius: 50px;
   -o-border-radius: 50px;
-  border-width: 4px; }
+  border-width: 4px;
+  padding: 0 2rem; }
 
 header {
+  position: relative;
   display: flex;
   padding: 10px;
   justify-items: center;
@@ -65,64 +77,95 @@ header {
   background-color: #FFFFFF;
   width: 100vw;
   border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px; }
-  header ul {
-    text-align: center;
-    justify-self: center;
-    justify-content: center; }
-    header ul li {
-      display: inline;
-      list-style: none;
-      margin-right: 10px; }
+  border-bottom-right-radius: 10px;
+  overflow: hidden; }
+  header div.logo {
+    left: 0%;
+    margin: 1rem 0; }
+  header .headerCentered {
+    float: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    header .headerCentered ul {
+      text-align: center;
+      justify-self: center;
+      justify-content: center; }
+      header .headerCentered ul li {
+        display: inline;
+        list-style: none;
+        margin-right: 1rem; }
   header .login {
     font-size: 18px;
     float: right;
-    right: 0; }
+    position: absolute;
+    top: 50%;
+    right: 0%;
+    transform: translate(-50%, -50%); }
 
 .headerImage {
-  background-image: url("../img/header_background.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../img/header_background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
   width: 100vw;
   height: 100vh;
-  background-repeat: no-repeat;
-  margin: auto; }
-  .headerImage button.outline {
-    border-width: 4px;
-    padding: 35px 58px;
-    background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-    background: transparent;
-    font-size: 1.125rem;
-    height: 80px;
-    letter-spacing: 1px;
-    padding: 4px;
-    text-decoration: none;
-    text-transform: uppercase;
-    width: 264px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
+  .headerImage button {
     border-radius: 50px;
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
     -ms-border-radius: 50px;
-    -o-border-radius: 50px;
-    margin-top: 35vh;
-    margin-left: 5%; }
+    -o-border-radius: 50px; }
+  .headerImage .border-gradient {
+    border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+    border-image-slice: 1;
+    border-width: 3px; }
+  .headerImage .btn {
+    display: block;
+    padding: 1em;
+    margin-top: 90px;
+    margin-right: 8em;
+    color: black;
+    text-decoration: none;
+    font-size: 1.5em;
+    float: left;
+    background: transparent;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px; }
   .headerImage h1 {
-    float: right;
+    background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 0;
+    margin-bottom: 0.5em;
     text-align: left;
-    margin-top: 30vh;
-    margin-right: 5%; }
+    float: right;
+    line-height: 60px; }
 
 main {
   width: 90%;
   margin: 0 auto;
   text-align: center;
-  margin: 1.5rem auto; }
+  margin: 1.5rem auto;
+  justify-content: center;
+  align-items: center; }
 
-.cards {
+.threeCards {
   display: flex;
   width: 100%;
   margin-top: 1.5rem;
   text-align: center;
   justify-content: center; }
-  .cards .card {
+  .threeCards .card {
     background-color: #ffffff;
     margin: 1.5rem;
     width: auto;
@@ -133,17 +176,17 @@ main {
     border-radius: 50px;
     color: #333333;
     text-align: center; }
-    .cards .card h3 {
+    .threeCards .card h3 {
       margin: 2.5rem 1.5rem;
       text-align: left; }
-    .cards .card hr {
+    .threeCards .card hr {
       width: 80%;
       margin: 1rem auto;
       text-align: left; }
-    .cards .card p {
+    .threeCards .card p {
       margin: 16px;
       text-align: left; }
-    .cards .card button {
+    .threeCards .card button {
       margin: 1rem auto; }
 
 hr {
@@ -189,9 +232,6 @@ h2 {
     .cards .cardWithImages button {
       margin: 1rem auto; }
 
-.cards:first-child {
-  margin-left: 5%; }
-
 footer {
   background: -webkit-linear-gradient(bottom, #72a5ba 0%, #9f96c6 60%, #bc8ccd 100%);
   background: -o-linear-gradient(bottom, #72a5ba 0%, #9f96c6 60%, #bc8ccd 100%);
@@ -199,11 +239,31 @@ footer {
   background: -moz-linear-gradient(bottom, #72a5ba 0%, #9f96c6 60%, #bc8ccd 100%);
   background: linear-gradient(to top, #72a5ba 0%, #9f96c6 60%, #bc8ccd 100%);
   width: 100vw;
-  height: 100vh; }
+  height: 70vh; }
   footer .footerContainer {
     width: 80%;
     margin: 1.5rem auto;
     text-align: center;
-    justify-content: center; }
+    justify-content: center;
+    color: #FFFFFF; }
     footer .footerContainer .footerTop {
       display: flex; }
+      footer .footerContainer .footerTop img {
+        margin-top: 2.5rem;
+        margin-right: 1rem; }
+      footer .footerContainer .footerTop .text {
+        margin-top: 2.5rem;
+        text-align: left; }
+    footer .footerContainer .supportOptions {
+      width: 80%;
+      margin-top: 2rem;
+      margin-right: 2.5rem;
+      float: right;
+      display: flex;
+      text-align: center;
+      color: #FFFFFF; }
+      footer .footerContainer .supportOptions .supportOptionsItem {
+        width: 10rem;
+        text-align: center; }
+        footer .footerContainer .supportOptions .supportOptionsItem h5 {
+          margin: 1rem 0 0 0; }
