--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,11 @@ $darkColor: #333;
     -webkit-box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: $backgroudColor;
     color: set-text-color($backgroudColor);
@@ -52,6 +57,12 @@ h3 {
 
 }
 
+h5 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    line-height: 10px;
+}
+
 a {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -67,7 +78,9 @@ p {
 }
 
 button.outline {
-    background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+    border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+    border-image-slice: 1;
+    border-width: 3px;
     background: transparent;
     box-sizing: border-box;
     display: block;
@@ -76,7 +89,6 @@ button.outline {
     letter-spacing: 1px;
     text-decoration: none;
     text-transform: uppercase;
-    width: 264px;
     z-index: 2;
     border-radius: 20px;
     -webkit-border-radius: 50px;
@@ -84,10 +96,12 @@ button.outline {
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
     border-width: 4px;
+    padding: 0 2rem;
 
 }
 
 header {
+    position: relative;
     display: flex;
     padding: 10px;
     justify-items: center;
@@ -96,64 +110,99 @@ header {
     width: 100vw;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    overflow: hidden;
 
 
-    div.logo {}
+    div.logo {
+        left: 0%;
+        margin: 1rem 0;
+    }
 
-    ul {
-        text-align: center;
-        justify-self: center;
-        justify-content: center;
+    .headerCentered {
+        float: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
 
-        li {
-            display: inline;
-            list-style: none;
-            margin-right: 10px;
+        ul {
+            text-align: center;
+            justify-self: center;
+            justify-content: center;
+
+
+            li {
+                display: inline;
+                list-style: none;
+                margin-right: 1rem;
+            }
         }
     }
 
     .login {
         font-size: 18px;
         float: right;
-        right: 0;
+        position: absolute;
+        top: 50%;
+        right: 0%;
+        transform: translate(-50%, -50%);
     }
 }
 
 .headerImage {
-    background-image: url("../img/header_background.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../img/header_background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
     width: 100vw;
     height: 100vh;
-    background-repeat: no-repeat;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
-    button.outline {
-        border-width: 4px;
-        padding: 35px 58px;
-        background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-        background: transparent;
-        font-size: 1.125rem;
-        height: 80px;
-        letter-spacing: 1px;
-        padding: 4px;
-        text-decoration: none;
-        text-transform: uppercase;
-        width: 264px;
+    button {
         border-radius: 50px;
         -webkit-border-radius: 50px;
         -moz-border-radius: 50px;
         -ms-border-radius: 50px;
         -o-border-radius: 50px;
-        margin-top: 35vh;
-        margin-left: 5%;
+    }
 
+    .border-gradient {
+        border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+        border-image-slice: 1;
+        border-width: 3px;
+    }
+
+    .btn {
+        display: block;
+        padding: 1em;
+        margin-top: 90px;
+        margin-right: 8em;
+        color: black;
+        text-decoration: none;
+        font-size: 1.5em;
+        float: left;
+        background: transparent;
+        border-radius: 50px;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        -ms-border-radius: 50px;
+        -o-border-radius: 50px;
     }
 
     h1 {
-        float: right;
+        background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        margin-top: 0;
+        margin-bottom: 0.5em;
         text-align: left;
-        margin-top: 30vh;
-        margin-right: 5%;
+        float: right;
+        line-height: 60px;
     }
 }
 
@@ -162,12 +211,12 @@ main {
     margin: 0 auto;
     text-align: center;
     margin: 1.5rem auto;
-
-
+    justify-content: center;
+    align-items: center;
 }
 
 
-.cards {
+.threeCards {
     display: flex;
     width: 100%;
     margin-top: 1.5rem;
@@ -273,11 +322,6 @@ h2 {
 
 }
 
-.cards:first-child {
-    margin-left: 5%;
-}
-
-
 footer {
     background: -webkit-linear-gradient(bottom, rgb(114, 165, 186) 0%, rgb(159, 150, 198) 60%, rgb(188, 140, 205) 100%);
     background: -o-linear-gradient(bottom, rgb(114, 165, 186) 0%, rgb(159, 150, 198) 60%, rgb(188, 140, 205) 100%);
@@ -285,18 +329,46 @@ footer {
     background: -moz-linear-gradient(bottom, rgb(114, 165, 186) 0%, rgb(159, 150, 198) 60%, rgb(188, 140, 205) 100%);
     background: linear-gradient(to top, rgb(114, 165, 186) 0%, rgb(159, 150, 198) 60%, rgb(188, 140, 205) 100%);
     width: 100vw;
-    height: 100vh;
+    height: 70vh;
 
     .footerContainer {
         width: 80%;
         margin: 1.5rem auto;
         text-align: center;
         justify-content: center;
+        color: #FFFFFF;
 
         .footerTop {
             display: flex;
 
-            img {}
+            img {
+                margin-top: 2.5rem;
+                margin-right: 1rem;
+            }
+
+            .text {
+                margin-top: 2.5rem;
+                text-align: left;
+            }
+        }
+
+        .supportOptions {
+            width: 80%;
+            margin-top: 2rem;
+            margin-right: 2.5rem;
+            float: right;
+            display: flex;
+            text-align: center;
+            color: #FFFFFF;
+
+            .supportOptionsItem {
+                width: 10rem;
+                text-align: center;
+
+                h5 {
+                    margin: 1rem 0 0 0;
+                }
+            }
         }
     }
 
