--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,26 +1,11 @@
-// Variables
-$backgroudColor: #F5F5F5;
-$mainFont: 'Arial';
-$fontColor: rgb(255, 255, 255);
-$lightColor: #f4f4f4;
-$darkColor: #333;
-
-// Functions
-@function set-text-color($backgroudColor) {
-    @if(lightness($backgroudColor) > 50) {
-        @return #000000;
-    }
-
-    @else {
-        @return #ffffff;
-    }
-}
+@import "config";
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    outline: none;
 }
 
 html {
@@ -38,33 +23,56 @@ body {
 }
 
 h1 {
-    font-family: 'Roboto', sans-serif;
-    font-size: 58px;
-    line-height: 48.83px;
+    font-family: $mainFont;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 72px;
 }
 
 h2 {
-    font-family: 'Roboto', sans-serif;
+    font-family: $mainFont;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
     font-size: 42px;
-    line-height: 39.06px;
 
 }
 
 h3 {
-    font-family: 'Roboto', sans-serif;
+    font-family: $mainFont;
     font-size: 30px;
-    line-height: 31.25px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+}
 
+h4 {
+    font-family: $mainFont;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
 }
 
 h5 {
-    font-family: 'Roboto', sans-serif;
+    font-family: $mainFont;
     font-size: 18px;
-    line-height: 10px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+}
+
+h6 {
+    font-family: $mainFont;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
 }
 
 a {
-    font-family: 'Roboto', sans-serif;
+    font-family: $mainFont;
     font-size: 16px;
     line-height: 8.19px;
     color: #333333;
@@ -73,31 +81,26 @@ a {
 
 p {
     font-size: 18px;
-    font-family: 'Roboto', sans-serif;
-    padding: 1rem 0;
+    font-family: $mainFont;
+    padding: 0.5rem 0;
 }
 
-button.outline {
-    border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-    border-image-slice: 1;
-    border-width: 3px;
-    background: transparent;
-    box-sizing: border-box;
-    display: block;
-    font-size: 1.125rem;
-    height: 80px;
-    letter-spacing: 1px;
-    text-decoration: none;
-    text-transform: uppercase;
-    z-index: 2;
-    border-radius: 20px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px;
-    border-width: 4px;
-    padding: 0 2rem;
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: $backgroudColor;
+}
 
+::-webkit-scrollbar {
+    border-radius: 10px;
+    width: 10px;
+    background-color: $backgroudColor;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #AEE1F7;
 }
 
 header {
@@ -106,7 +109,9 @@ header {
     padding: 10px;
     justify-items: center;
     float: left;
-    background-color: #FFFFFF;
+    background: #FFFFFF;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
+    border-radius: 0px 0px 10px 10px;
     width: 100vw;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -116,6 +121,7 @@ header {
     div.logo {
         left: 0%;
         margin: 1rem 0;
+        margin-left: 2.5%;
     }
 
     .headerCentered {
@@ -124,6 +130,11 @@ header {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        font-size: 16px;
 
 
         ul {
@@ -147,6 +158,7 @@ header {
         top: 50%;
         right: 0%;
         transform: translate(-50%, -50%);
+        margin-right: 2.5%;
     }
 }
 
@@ -169,6 +181,7 @@ header {
         -moz-border-radius: 50px;
         -ms-border-radius: 50px;
         -o-border-radius: 50px;
+        outline: none;
     }
 
     .border-gradient {
@@ -179,12 +192,18 @@ header {
 
     .btn {
         display: block;
-        padding: 1em;
-        margin-top: 90px;
+        padding: 34px 68px;
+        margin-top: 50%;
+        margin-bottom: 50%;
         margin-right: 8em;
-        color: black;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        font-size: 36px;
+        text-align: center;
+        letter-spacing: 0.1em;
+        color: #AEE1F7;
         text-decoration: none;
-        font-size: 1.5em;
         float: left;
         background: transparent;
         border-radius: 50px;
@@ -198,11 +217,10 @@ header {
         background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        margin-top: 0;
-        margin-bottom: 0.5em;
+        margin-top: 40%;
+        margin-bottom: 0;
         text-align: left;
         float: right;
-        line-height: 60px;
     }
 }
 
@@ -213,113 +231,179 @@ main {
     margin: 1.5rem auto;
     justify-content: center;
     align-items: center;
-}
 
-
-.threeCards {
-    display: flex;
-    width: 100%;
-    margin-top: 1.5rem;
-    text-align: center;
-    justify-content: center;
-
-    .card {
-        background-color: #ffffff;
-        margin: 1.5rem;
-        width: auto;
-        max-width: 400px;
-        height: auto;
-        background: #FFFFFF;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
-        border-radius: 50px;
-        color: #333333;
+    button.outline {
+        border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+        border-image-slice: 1;
+        border-width: 3px;
+        background: transparent;
+        box-sizing: border-box;
+        display: block;
+        letter-spacing: 1px;
+        text-decoration: none;
+        text-transform: uppercase;
+        border-width: 4px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        font-size: 15px;
         text-align: center;
-
-        h3 {
-            margin: 2.5rem 1.5rem;
-            text-align: left;
-        }
-
-        hr {
-            width: 80%;
-            margin: 1rem auto;
-            text-align: left;
-        }
-
-        p {
-            margin: 16px;
-            text-align: left;
-        }
-
-        button {
-            margin: 1rem auto;
-        }
+        color: #557C8C;
     }
 
-}
-
-hr {
-    margin: 1em auto;
-    border: 2px solid #E5E5E5;
-}
-
-h2 {
-    margin: 1rem auto;
-}
-
-.socials {
-    display: flex;
-    text-align: center;
-    margin: auto;
-    justify-content: center;
-
-    .socialMedia {
-        margin: 1.5rem;
-
-    }
-}
-
-.cards {
-    display: flex;
-    width: 100%;
-    margin: 1.5rem auto;
-    text-align: center;
-    justify-content: center;
-
-    .cardWithImages {
-        background-color: #ffffff;
-        margin: 1rem;
-        width: auto;
-        max-width: 400px;
-        height: auto;
-        background: #FFFFFF;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
-        border-radius: 50px;
-        color: #333333;
+    .threeCards {
+        display: flex;
+        width: 100%;
+        margin-top: 1.5rem;
         text-align: center;
+        justify-content: center;
+        justify-self: center;
 
-        img {
-            margin: 3rem 0;
+        .card {
+            display: block;
+            background-color: #ffffff;
+            margin: 1.5rem;
+            width: 360px;
+            height: 400px;
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
+            border-radius: 50px;
+            color: #333333;
+            text-align: center;
+
+            h3 {
+                margin: 20px 0 0 0;
+                text-align: center;
+            }
+
+            hr {
+                width: 80%;
+                margin: 10px auto 0 auto;
+                text-align: left;
+                border: 2px solid #E5E5E5;
+            }
+
+            p {
+                margin: 0 10px 0 38px;
+                text-align: left;
+                font-style: normal;
+                font-weight: normal;
+                line-height: normal;
+                font-size: 14px;
+                color: #6D6D6D;
+            }
+
+            button {
+                position: relative;
+                margin: 10px auto;
+                padding: 14px 28px;
+            }
         }
 
-        h3 {
-            margin: 0 1.5rem;
+    }
+
+    hr {
+        margin: 60px auto 0 auto;
+        border: 2px solid #E5E5E5;
+    }
+
+    h2 {
+        margin: 65px auto 0 auto;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        font-size: 36px;
+        text-align: center;
+        color: #333333;
+    }
+
+    .socials {
+        display: flex;
+        text-align: center;
+        margin: 65px auto 0 auto;
+        justify-content: center;
+
+        .socialMedia {
+            margin: 1.5rem;
+
         }
 
-        p {
-            margin: 16px;
-        }
-
-        p.price {
-            font-size: 30px;
-
-        }
-
-        button {
-            margin: 1rem auto;
+        .roundedBorders {
+            margin: 14px auto 0 auto;
+            padding: 7px 5px;
+            border: 1px solid #C4C4C4;
+            box-sizing: border-box;
+            border-radius: 30px;
         }
     }
 
+    .cards {
+        display: flex;
+        width: 95%;
+        margin: 1.5rem 5%;
+        text-align: center;
+        justify-content: center;
+        justify-self: center;
+
+        .cardWithImages {
+            background-color: #ffffff;
+            margin: 1rem;
+            width: 299px;
+            height: 400px;
+            background: #FFFFFF;
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
+            border-radius: 50px;
+            color: #333333;
+            text-align: center;
+
+            img {
+                margin: 3rem 0 0 0;
+            }
+
+            h3 {
+                font-style: normal;
+                font-weight: normal;
+                line-height: normal;
+                font-size: 16px;
+                color: #333333;
+
+            }
+
+            p.price {
+                font-style: normal;
+                font-weight: normal;
+                line-height: normal;
+                font-size: 30px;
+                color: #333333;
+                padding: 0 auto;
+            }
+
+            p.priceExplanation {
+                font-style: normal;
+                font-weight: normal;
+                line-height: normal;
+                font-size: 12px;
+                color: #6D6D6D;
+                margin: 0 auto;
+                padding: 0 auto;
+            }
+
+            p {
+                font-style: normal;
+                font-weight: normal;
+                line-height: normal;
+                font-size: 12px;
+                text-align: center;
+                color: #6D6D6D;
+            }
+
+            button {
+                position: relative;
+                margin: 10px auto;
+                padding: 14px 28px;
+            }
+        }
+
+    }
 }
 
 footer {
@@ -329,7 +413,8 @@ footer {
     background: -moz-linear-gradient(bottom, rgb(114, 165, 186) 0%, rgb(159, 150, 198) 60%, rgb(188, 140, 205) 100%);
     background: linear-gradient(to top, rgb(114, 165, 186) 0%, rgb(159, 150, 198) 60%, rgb(188, 140, 205) 100%);
     width: 100vw;
-    height: 70vh;
+    height: 75vh;
+    margin: 60px 0 0 0;
 
     .footerContainer {
         width: 80%;
@@ -364,12 +449,20 @@ footer {
             .supportOptionsItem {
                 width: 10rem;
                 text-align: center;
+                padding: 20px;
 
                 h5 {
                     margin: 1rem 0 0 0;
                 }
             }
+
+            hr {
+                border: 1px solid #FFFFFF;
+            }
         }
     }
 
 }
+
+
+// @import "mobile";
