--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://rsms.me/inter/inter.css");
 * {
   margin: 0;
@@ -71,6 +72,9 @@ p {
   font-family: "Inter UI", "Roboto", sans-serif;
   padding: 0.5rem 0; }
 
+button {
+  cursor: pointer; }
+
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
@@ -143,18 +147,8 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center; }
-  .headerImage button {
-    border-radius: 50px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px;
-    outline: none; }
-  .headerImage .border-gradient {
-    border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-    border-image-slice: 1;
-    border-width: 3px; }
   .headerImage .btn {
+    border: 4PX solid #BC8CCD;
     display: block;
     padding: 34px 68px;
     margin-top: 50%;
@@ -191,23 +185,22 @@ main {
   margin: 1.5rem auto;
   justify-content: center;
   align-items: center; }
-  main button.outline {
-    border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-    border-image-slice: 1;
-    border-width: 3px;
-    background: transparent;
-    box-sizing: border-box;
+  main button.btn {
+    border: 4PX solid #72A5BA;
     display: block;
-    letter-spacing: 1px;
-    text-decoration: none;
-    text-transform: uppercase;
-    border-width: 4px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: normal;
     line-height: normal;
-    font-size: 15px;
     text-align: center;
-    color: #557C8C; }
+    color: #AEE1F7;
+    text-decoration: none;
+    background: transparent;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    margin: 0; }
   main .threeCards {
     display: flex;
     width: 100%;
@@ -328,7 +321,7 @@ footer {
   background: -moz-linear-gradient(bottom, #72a5ba 0%, #9f96c6 60%, #bc8ccd 100%);
   background: linear-gradient(to top, #72a5ba 0%, #9f96c6 60%, #bc8ccd 100%);
   width: 100vw;
-  height: 75vh;
+  height: 70vh;
   margin: 60px 0 0 0; }
   footer .footerContainer {
     width: 80%;
@@ -338,6 +331,8 @@ footer {
     color: #FFFFFF; }
     footer .footerContainer .footerTop {
       display: flex; }
+      footer .footerContainer .footerTop a {
+        color: #FFFFFF; }
       footer .footerContainer .footerTop img {
         margin-top: 2.5rem;
         margin-right: 1rem; }
@@ -355,8 +350,99 @@ footer {
       footer .footerContainer .supportOptions .supportOptionsItem {
         width: 10rem;
         text-align: center;
-        padding: 20px; }
+        padding: 20px;
+        margin-right: 3.5rem;
+        margin-left: 3.5rem; }
         footer .footerContainer .supportOptions .supportOptionsItem h5 {
           margin: 1rem 0 0 0; }
       footer .footerContainer .supportOptions hr {
         border: 1px solid #FFFFFF; }
+
+body#Услуги header a {
+  color: #2C5E8E; }
+
+body#Услуги .headerImage {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../img/Услуги_header_background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  width: 100vw;
+  height: 100vh;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
+  body#Услуги .headerImage .headerImageInner {
+    display: block;
+    float: right;
+    justify-content: center;
+    align-items: center;
+    text-align: center; }
+  body#Услуги .headerImage h1 {
+    margin: 0;
+    margin-top: 3em;
+    background-image: none;
+    -webkit-background-clip: none;
+    -webkit-text-fill-color: #333333;
+    color: #333333;
+    text-align: left; }
+  body#Услуги .headerImage button.btn {
+    border: none;
+    display: block;
+    padding: 34px 68px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 36px;
+    text-align: center;
+    letter-spacing: 0.1em;
+    color: #ffffff;
+    text-decoration: none;
+    background: #2C5E8E;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    margin: 0;
+    margin-top: 3.2em; }
+
+body#Услуги footer {
+  background: none;
+  background: none;
+  background: none;
+  background: none;
+  background: none;
+  width: 100vw;
+  background-color: #2C5E8E;
+  width: 100vw;
+  height: 75vh;
+  margin: 60px 0 0 0; }
+
+body#Услуги main button.btn {
+  border: none;
+  display: block;
+  font-style: normal;
+  font-weight: normal;
+  line-height: normal;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  background: #2C5E8E;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  margin: 0; }
+
+body#Услуги main .threeCards .card button {
+  position: relative;
+  margin: 10px auto;
+  padding: 14px 28px; }
+
+body#Услуги .cards .cardWithImages button {
+  position: relative;
+  margin: 10px auto;
+  padding: 14px 28px; }
