--- a/scss/style.scss
+++ b/scss/style.scss
@@ -85,6 +85,10 @@ p {
     padding: 0.5rem 0;
 }
 
+button{
+    cursor: pointer;
+}
+
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -175,22 +179,9 @@ header {
     align-items: center;
     text-align: center;
 
-    button {
-        border-radius: 50px;
-        -webkit-border-radius: 50px;
-        -moz-border-radius: 50px;
-        -ms-border-radius: 50px;
-        -o-border-radius: 50px;
-        outline: none;
-    }
-
-    .border-gradient {
-        border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-        border-image-slice: 1;
-        border-width: 3px;
-    }
 
     .btn {
+        border: 4PX solid #BC8CCD;
         display: block;
         padding: 34px 68px;
         margin-top: 50%;
@@ -232,23 +223,22 @@ main {
     justify-content: center;
     align-items: center;
 
-    button.outline {
-        border-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-        border-image-slice: 1;
-        border-width: 3px;
-        background: transparent;
-        box-sizing: border-box;
+    button.btn {
+        border: 4PX solid #72A5BA;
         display: block;
-        letter-spacing: 1px;
-        text-decoration: none;
-        text-transform: uppercase;
-        border-width: 4px;
         font-style: normal;
-        font-weight: 500;
+        font-weight: normal;
         line-height: normal;
-        font-size: 15px;
         text-align: center;
-        color: #557C8C;
+        color: #AEE1F7;
+        text-decoration: none;
+        background: transparent;
+        border-radius: 50px;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        -ms-border-radius: 50px;
+        -o-border-radius: 50px;
+        margin: 0;
     }
 
     .threeCards {
@@ -413,8 +403,9 @@ footer {
     background: -moz-linear-gradient(bottom, rgb(114, 165, 186) 0%, rgb(159, 150, 198) 60%, rgb(188, 140, 205) 100%);
     background: linear-gradient(to top, rgb(114, 165, 186) 0%, rgb(159, 150, 198) 60%, rgb(188, 140, 205) 100%);
     width: 100vw;
-    height: 75vh;
+    height: 70vh;
     margin: 60px 0 0 0;
+
 
     .footerContainer {
         width: 80%;
@@ -425,6 +416,10 @@ footer {
 
         .footerTop {
             display: flex;
+
+            a{
+                color: #FFFFFF;
+            }
 
             img {
                 margin-top: 2.5rem;
@@ -450,6 +445,8 @@ footer {
                 width: 10rem;
                 text-align: center;
                 padding: 20px;
+                margin-right: 3.5rem;
+                margin-left: 3.5rem;
 
                 h5 {
                     margin: 1rem 0 0 0;
@@ -461,6 +458,135 @@ footer {
             }
         }
     }
+
+}
+
+// Services css
+
+body#Услуги {
+
+    header {
+        a {
+            color: #2C5E8E;
+        }
+    }
+
+    .headerImage {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../img/Услуги_header_background.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+        width: 100vw;
+        height: 100vh;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        .headerImageInner {
+            display: block;
+            float: right;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 0;
+            margin-top: 3em;
+            background-image: none;
+            -webkit-background-clip: none;
+            -webkit-text-fill-color: #333333;
+            color: #333333;
+            text-align: left;
+        }
+
+        button.btn {
+            border: none;
+            display: block;
+            padding: 34px 68px;
+            font-style: normal;
+            font-weight: normal;
+            line-height: normal;
+            font-size: 36px;
+            text-align: center;
+            letter-spacing: 0.1em;
+            color: #ffffff;
+            text-decoration: none;
+            background: #2C5E8E;
+            border-radius: 50px;
+            -webkit-border-radius: 50px;
+            -moz-border-radius: 50px;
+            -ms-border-radius: 50px;
+            -o-border-radius: 50px;
+            margin: 0;
+            margin-top: 3.2em;
+        }
+
+
+    }
+
+    footer {
+        background: none;
+        background: none;
+        background: none;
+        background: none;
+        background: none;
+        width: 100vw;
+        background-color: #2C5E8E;
+        width: 100vw;
+        height: 75vh;
+        margin: 60px 0 0 0;
+    }
+
+    main {
+
+        button.btn {
+            border: none;
+            display: block;
+            font-style: normal;
+            font-weight: normal;
+            line-height: normal;
+            text-align: center;
+            color: #ffffff;
+            text-decoration: none;
+            background: #2C5E8E;
+            border-radius: 50px;
+            -webkit-border-radius: 50px;
+            -moz-border-radius: 50px;
+            -ms-border-radius: 50px;
+            -o-border-radius: 50px;
+            margin: 0;
+        }
+
+        .threeCards {
+
+            .card {
+
+                button {
+                    position: relative;
+                    margin: 10px auto;
+                    padding: 14px 28px;
+                }
+            }
+
+        }
+    }
+
+    .cards {
+
+        .cardWithImages {
+
+            button {
+                position: relative;
+                margin: 10px auto;
+                padding: 14px 28px;
+            }
+        }
+
+    }
+
 
 }
 
