setup for respossive design

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,7 +1,7 @@
-// @include mediaXl {}
+@include mediaXl {}
 
-// @include mediaLg {}
+@include mediaLg {}
 
-// @include mediaMd {}
+@include mediaMd {}
 
-// @include mediaSm {}
+@include mediaSm {}
