--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,103 @@
 @charset "UTF-8";
 @import url("https://rsms.me/inter/inter.css");
+@import url("typeface-inter");
+@import url("Inter-UI");
+.menu-btn {
+  position: absolute;
+  z-index: 3;
+  right: 35px;
+  top: 35px;
+  cursor: pointer;
+  transition: all 500ms ease-in-out; }
+  .menu-btn .btn-line {
+    width: 28px;
+    height: 3px;
+    margin: 0 0 5px 0;
+    background: #ffffff;
+    transition: all 500ms ease-in-out; }
+  .menu-btn.close {
+    transform: rotate(180deg); }
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px); }
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0; }
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -6px); }
+
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden; }
+  .menu.show {
+    visibility: visible; }
+  .menu-branding, .menu-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden; }
+  .menu-nav {
+    margin: 0;
+    padding: 0;
+    background: #373737;
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    transition: all 500ms ease-in-out; }
+    .menu-nav.show {
+      transform: translate3d(0, 0, 0); }
+  .menu-branding {
+    background: #444;
+    transform: translate3d(0, 100%, 0);
+    transition: all 500ms ease-in-out; }
+    .menu-branding.show {
+      transform: translate3d(0, 0, 0); }
+    .menu-branding .portrait {
+      width: 250px;
+      height: 250px;
+      background: url("../img/portrait.jpg");
+      border-radius: 50%;
+      border: solid 3px #00a2ff; }
+  .menu .nav-item {
+    transform: translate3d(600px, 0, 0);
+    transition: all 500ms ease-in-out; }
+    .menu .nav-item.show {
+      transform: translate3d(0, 0, 0); }
+    .menu .nav-item.current > a {
+      color: #00a2ff; }
+  .menu .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 25px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 300;
+    color: #ffffff;
+    text-decoration: none;
+    transition: all 500ms ease-in-out; }
+    .menu .nav-link:hover {
+      color: #00a2ff;
+      transform: scale(1.1); }
+
+.nav-item:nth-child(1) {
+  transition: 0.5s; }
+
+.nav-item:nth-child(2) {
+  transition: 1s; }
+
+.nav-item:nth-child(3) {
+  transition: 1.5s; }
+
+.nav-item:nth-child(4) {
+  transition: 2s; }
+
+.nav-item:nth-child(5) {
+  transition: 2.5s; }
+
 * {
   margin: 0;
   padding: 0;
@@ -149,6 +247,8 @@ header {
   text-align: center; }
   .headerImage .btn {
     border: 4PX solid #BC8CCD;
+    border-top-color: #BC8CCD;
+    border-bottom-color: #72A5BA;
     display: block;
     padding: 34px 68px;
     margin-top: 50%;
@@ -169,6 +269,8 @@ header {
     -moz-border-radius: 50px;
     -ms-border-radius: 50px;
     -o-border-radius: 50px; }
+    .headerImage .btn:hover {
+      background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%); }
   .headerImage h1 {
     background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
     -webkit-background-clip: text;
@@ -186,7 +288,9 @@ main {
   justify-content: center;
   align-items: center; }
   main button.btn {
-    border: 4PX solid #72A5BA;
+    border: 4PX solid #BC8CCD;
+    border-top-color: #BC8CCD;
+    border-bottom-color: #72A5BA;
     display: block;
     font-style: normal;
     font-weight: normal;
@@ -201,6 +305,8 @@ main {
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
     margin: 0; }
+    main button.btn:hover {
+      background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%); }
   main .threeCards {
     display: flex;
     width: 100%;
@@ -381,7 +487,7 @@ body#Услуги .headerImage {
     text-align: center; }
   body#Услуги .headerImage h1 {
     margin: 0;
-    margin-top: 3em;
+    margin-top: 3rem;
     background-image: none;
     -webkit-background-clip: none;
     -webkit-text-fill-color: #333333;
@@ -406,19 +512,8 @@ body#Услуги .headerImage {
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
     margin: 0;
-    margin-top: 3.2em; }
-
-body#Услуги footer {
-  background: none;
-  background: none;
-  background: none;
-  background: none;
-  background: none;
-  width: 100vw;
-  background-color: #2C5E8E;
-  width: 100vw;
-  height: 100vh;
-  margin: 60px 0 0 0; }
+    margin-top: 3.2rem;
+    justify-self: center; }
 
 body#Услуги main button.btn {
   border: none;
@@ -446,3 +541,14 @@ body#Услуги .cards .cardWithImages button {
   position: relative;
   margin: 10px auto;
   padding: 14px 28px; }
+
+body#Услуги footer {
+  background: none;
+  background: none;
+  background: none;
+  background: none;
+  background: none;
+  background-color: #2C5E8E;
+  width: 100vw;
+  height: 100vh;
+  margin: 60px 0 0 0; }
