--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "config";
+@import "menu";
 
 * {
     margin: 0;
@@ -182,6 +183,8 @@ header {
 
     .btn {
         border: 4PX solid #BC8CCD;
+        border-top-color: #BC8CCD;
+        border-bottom-color: #72A5BA;
         display: block;
         padding: 34px 68px;
         margin-top: 50%;
@@ -202,6 +205,10 @@ header {
         -moz-border-radius: 50px;
         -ms-border-radius: 50px;
         -o-border-radius: 50px;
+
+        &:hover {
+            background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+        }
     }
 
     h1 {
@@ -224,7 +231,9 @@ main {
     align-items: center;
 
     button.btn {
-        border: 4PX solid #72A5BA;
+        border: 4PX solid #BC8CCD;
+        border-top-color: #BC8CCD;
+        border-bottom-color: #72A5BA;
         display: block;
         font-style: normal;
         font-weight: normal;
@@ -239,6 +248,10 @@ main {
         -ms-border-radius: 50px;
         -o-border-radius: 50px;
         margin: 0;
+
+        &:hover {
+            background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+        }
     }
 
     .threeCards {
@@ -494,7 +507,7 @@ body#Услуги {
 
         h1 {
             margin: 0;
-            margin-top: 3em;
+            margin-top: 3rem;
             background-image: none;
             -webkit-background-clip: none;
             -webkit-text-fill-color: #333333;
@@ -521,23 +534,11 @@ body#Услуги {
             -ms-border-radius: 50px;
             -o-border-radius: 50px;
             margin: 0;
-            margin-top: 3.2em;
+            margin-top: 3.2rem;
+            justify-self: center;
         }
 
 
-    }
-
-    footer {
-        background: none;
-        background: none;
-        background: none;
-        background: none;
-        background: none;
-        width: 100vw;
-        background-color: #2C5E8E;
-        width: 100vw;
-        height: 100vh;
-        margin: 60px 0 0 0;
     }
 
     main {
@@ -587,6 +588,17 @@ body#Услуги {
 
     }
 
+    footer {
+        background: none;
+        background: none;
+        background: none;
+        background: none;
+        background: none;
+        background-color: #2C5E8E;
+        width: 100vw;
+        height: 100vh;
+        margin: 60px 0 0 0;
+    }
 
 }
 
