--- a/css/style.css
+++ b/css/style.css
@@ -427,8 +427,11 @@ footer {
   background: -moz-linear-gradient(bottom, #72a5ba 0%, #9f96c6 60%, #bc8ccd 100%);
   background: linear-gradient(to top, #72a5ba 0%, #9f96c6 60%, #bc8ccd 100%);
   width: 100vw;
-  height: 100vh;
-  margin: 60px 0 0 0; }
+  margin: 60px 0 0 0;
+  height: auto;
+  overflow: hidden;
+  position: relative;
+  bottom: 0px; }
   footer .footerContainer {
     width: 80%;
     margin: 1.5rem auto;
@@ -487,7 +490,7 @@ body#Услуги .headerImage {
     text-align: center; }
   body#Услуги .headerImage h1 {
     margin: 0;
-    margin-top: 3rem;
+    margin-top: 6rem;
     background-image: none;
     -webkit-background-clip: none;
     -webkit-text-fill-color: #333333;
@@ -512,7 +515,7 @@ body#Услуги .headerImage {
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
     margin: 0;
-    margin-top: 3.2rem;
+    margin-top: 3rem;
     justify-self: center; }
 
 body#Услуги main button.btn {
@@ -550,5 +553,8 @@ body#Услуги footer {
   background: none;
   background-color: #2C5E8E;
   width: 100vw;
-  height: 100vh;
+  height: auto;
+  overflow: hidden;
+  position: relative;
+  bottom: 0px;
   margin: 60px 0 0 0; }
