--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ main {
     font-weight: normal;
     line-height: normal;
     text-align: center;
-    color: #AEE1F7;
+    color: #557C8C;
     text-decoration: none;
     background: transparent;
     border-radius: 50px;
