fixed landing button with svg fixed other small details

--- a/css/style.css
+++ b/css/style.css
@@ -245,15 +245,20 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center; }
-  .headerImage .btn {
-    border: 4PX solid #BC8CCD;
-    border-top-color: #BC8CCD;
-    border-bottom-color: #72A5BA;
-    display: block;
-    padding: 34px 68px;
-    margin-top: 50%;
-    margin-bottom: 50%;
-    margin-right: 8em;
+  .headerImage h1 {
+    background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 40%;
+    margin-bottom: 0;
+    text-align: left;
+    float: right;
+    margin-left: 26rem; }
+  .headerImage a[type="button"] {
+    position: relative;
+    padding: 35px 68px;
+    z-index: 0;
+    float: left;
     font-style: normal;
     font-weight: normal;
     line-height: normal;
@@ -262,23 +267,31 @@ header {
     letter-spacing: 0.1em;
     color: #AEE1F7;
     text-decoration: none;
-    float: left;
-    background: transparent;
-    border-radius: 50px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px; }
-    .headerImage .btn:hover {
-      background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%); }
-  .headerImage h1 {
-    background-image: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-top: 40%;
-    margin-bottom: 0;
-    text-align: left;
-    float: right; }
+    margin-top: 50%;
+    margin-bottom: 50%;
+    margin-right: -9rem; }
+    .headerImage a[type="button"] .icon {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      height: 100%;
+      width: 100%;
+      z-index: -1; }
+      .headerImage a[type="button"] .icon path {
+        transition: opacity 0.4s ease; }
+        .headerImage a[type="button"] .icon path:first-of-type {
+          fill: transparent;
+          stroke: url(#linearGradient-1);
+          stroke-width: 3;
+          opacity: 1; }
+        .headerImage a[type="button"] .icon path.icon--plain {
+          opacity: 0;
+          stroke: none;
+          stroke-width: 0; }
+    .headerImage a[type="button"]:hover path:first-of-type {
+      opacity: 0; }
+    .headerImage a[type="button"]:hover path.icon--plain {
+      opacity: 1; }
 
 main {
   width: 90%;
@@ -299,11 +312,6 @@ main {
     color: #557C8C;
     text-decoration: none;
     background: transparent;
-    border-radius: 50px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px;
     margin: 0; }
     main button.btn:hover {
       background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%); }
@@ -341,9 +349,16 @@ main {
         font-size: 14px;
         color: #6D6D6D; }
       main .threeCards .card button {
+        color: #557C8C;
+        font-size: 15px;
         position: relative;
         margin: 10px auto;
-        padding: 14px 28px; }
+        padding: 14px 28px;
+        border-radius: 28px;
+        -webkit-border-radius: 28px;
+        -moz-border-radius: 28px;
+        -ms-border-radius: 28px;
+        -o-border-radius: 28px; }
   main hr {
     margin: 60px auto 0 auto;
     border: 2px solid #E5E5E5; }
@@ -363,8 +378,9 @@ main {
     main .socials .socialMedia {
       margin: 1.5rem; }
     main .socials .roundedBorders {
+      font-size: 14px;
       margin: 14px auto 0 auto;
-      padding: 7px 5px;
+      padding: 7px 9px;
       border: 1px solid #C4C4C4;
       box-sizing: border-box;
       border-radius: 30px; }
@@ -416,9 +432,16 @@ main {
         text-align: center;
         color: #6D6D6D; }
       main .cards .cardWithImages button {
+        color: #557C8C;
+        font-size: 15px;
         position: relative;
         margin: 10px auto;
-        padding: 14px 28px; }
+        padding: 14px 37px;
+        border-radius: 37px;
+        -webkit-border-radius: 37px;
+        -moz-border-radius: 37px;
+        -ms-border-radius: 37px;
+        -o-border-radius: 37px; }
 
 footer {
   background: -webkit-linear-gradient(bottom, #72a5ba 0%, #9f96c6 60%, #bc8ccd 100%);
@@ -487,15 +510,20 @@ body#Услуги .headerImage {
     float: right;
     justify-content: center;
     align-items: center;
-    text-align: center; }
+    text-align: center;
+    padding: 0 auto; }
   body#Услуги .headerImage h1 {
     margin: 0;
     margin-top: 6rem;
+    margin-right: 8rem;
     background-image: none;
     -webkit-background-clip: none;
     -webkit-text-fill-color: #333333;
     color: #333333;
-    text-align: left; }
+    text-align: left;
+    font-size: 48px; }
+    body#Услуги .headerImage h1 b {
+      font-size: 58px; }
   body#Услуги .headerImage button.btn {
     border: none;
     display: block;
@@ -503,7 +531,7 @@ body#Услуги .headerImage {
     font-style: normal;
     font-weight: normal;
     line-height: normal;
-    font-size: 36px;
+    font-size: 22px;
     text-align: center;
     letter-spacing: 0.1em;
     color: #ffffff;
@@ -515,7 +543,7 @@ body#Услуги .headerImage {
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
     margin: 0;
-    margin-top: 3rem;
+    margin-top: 4rem;
     justify-self: center; }
 
 body#Услуги main button.btn {
@@ -535,15 +563,24 @@ body#Услуги main button.btn {
   -o-border-radius: 50px;
   margin: 0; }
 
-body#Услуги main .threeCards .card button {
+body#Услуги main section.one h2 {
+  font-size: 47px; }
+
+body#Услуги main section.one .threeCards .card button {
   position: relative;
   margin: 10px auto;
   padding: 14px 28px; }
 
-body#Услуги .cards .cardWithImages button {
+body#Услуги section.two h2 {
+  font-size: 41px; }
+
+body#Услуги section.two .cards .cardWithImages button {
   position: relative;
   margin: 10px auto;
   padding: 14px 28px; }
+
+body#Услуги section.three h2 {
+  font-size: 41px; }
 
 body#Услуги footer {
   background: none;
